[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "copycatdb-hiss"
version = "0.1.0"
requires-python = ">=3.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "hiss.hiss_native"
